Tweak which items collapse in digest and fix slack formatting